[Mac][Material Design] Update toolbar bottom border color.

This cl updates the border color at the bottom of the toolbar (when the
bookmarks bar is in NTP mode) and other locations to the correct value
for Material Design.

R=avi@chromium.org
BUG=593436

Review-Url: https://codereview.chromium.org/1950703002
Cr-Commit-Position: refs/heads/master@{#394885}