chrome/browser/ui/cocoa/download/download_shelf_view_cocoa.mm
@@ -10,6 +10,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #import "chrome/browser/ui/cocoa/tabs/tab_strip_controller.h"
 #import "chrome/browser/ui/cocoa/view_id_util.h"
 #import "ui/base/cocoa/nsview_additions.h"
+#include "ui/base/material_design/material_design_controller.h"
 
 @implementation DownloadShelfView
 
@@ -30,12 +31,18 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 }
 
 - (NSColor*)strokeColor {
-  BOOL isActive = [[self window] isMainWindow];
   const ui::ThemeProvider* themeProvider = [[self window] themeProvider];
-  return themeProvider ? themeProvider->GetNSColor(
-      isActive ? ThemeProperties::COLOR_TOOLBAR_STROKE :
-                 ThemeProperties::COLOR_TOOLBAR_STROKE_INACTIVE) :
-      [NSColor blackColor];
+  if (!themeProvider) {
+    return [NSColor blackColor];
+  }
+  if (!ui::MaterialDesignController::IsModeMaterial()) {
+    BOOL isActive = [[self window] isMainWindow];
+    return themeProvider->GetNSColor(
+        isActive ? ThemeProperties::COLOR_TOOLBAR_STROKE :
+                   ThemeProperties::COLOR_TOOLBAR_STROKE_INACTIVE);
+  }
+  return themeProvider->GetNSColor(
+             ThemeProperties::COLOR_DETACHED_BOOKMARK_BAR_SEPARATOR);
 }
 
 - (NSPoint)patternPhase {
