chrome/browser/ui/cocoa/infobars/infobar_gradient_view.mm
@@ -53,10 +53,14 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
   if (!themeProvider)
     return [NSColor blackColor];
 
-  BOOL active = [[self window] isMainWindow];
+  if (!ui::MaterialDesignController::IsModeMaterial()) {
+    BOOL active = [[self window] isMainWindow];
+    return themeProvider->GetNSColor(
+        active ? ThemeProperties::COLOR_TOOLBAR_STROKE :
+                 ThemeProperties::COLOR_TOOLBAR_STROKE_INACTIVE);
+  }
   return themeProvider->GetNSColor(
-      active ? ThemeProperties::COLOR_TOOLBAR_STROKE :
-               ThemeProperties::COLOR_TOOLBAR_STROKE_INACTIVE);
+             ThemeProperties::COLOR_DETACHED_BOOKMARK_BAR_SEPARATOR);
 }
 
 - (void)drawRect:(NSRect)rect {
