chrome/browser/ui/cocoa/toolbar/toolbar_view_cocoa.mm
@@ -7,6 +7,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #import "chrome/browser/ui/cocoa/view_id_util.h"
 #import "ui/base/cocoa/nsview_additions.h"
+#include "ui/base/material_design/material_design_controller.h"
 
 @implementation ToolbarView
 
@@ -23,7 +24,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 // Override of |-[BackgroundGradientView strokeColor]|; make it respect opacity.
 - (NSColor*)strokeColor {
-  return [[super strokeColor] colorWithAlphaComponent:[self dividerOpacity]];
+  // Only return a transparent color if not Material Design.
+  if (!ui::MaterialDesignController::IsModeMaterial()) {
+    return [[super strokeColor] colorWithAlphaComponent:[self dividerOpacity]];
+  }
+  return [super strokeColor];
 }
 
 - (BOOL)accessibilityIsIgnored {
